bugfix + missing data
Former-commit-id: fc2b72bc7f3725601ed3922d93b443801af19767 [formerly 474947a53f690e50fa1c80eb8cfbfcfea3807aa4]
Former-commit-id: 65713be82a1f5acb69587b313450d3d2b7de1bfa

--- a/tools/pelletSimulator.html
+++ b/tools/pelletSimulator.html
@@ -154,7 +154,7 @@ var simulator = {
 
 				//secondary gravity:
 				for(var j=0;j<children.length;j++){
-					var angle = Math.cos(2*Math.PI*this.params.time/children[j].orbit.period);
+					var angle = 2*Math.PI*this.params.time/children[j].orbit.period;
 					var radius = children[j].orbit.semiMajor - secondary.orbit.semiMajor * 1/(massRatio + 1);
 					var relx = state.pellets[i].x - Math.cos(angle) * radius;
 					var rely = state.pellets[i].y + Math.sin(angle) * radius;
