add pellet to nav, link on pellet now goes back to learn
Former-commit-id: 905984c4520b8ecbdf211e4c6c06d8cd30c2a336

--- a/learn.html
+++ b/learn.html
@@ -21,7 +21,7 @@ of the Moon."
 </header>
 <div class="containerLearn">
 	<section class="calc" id="tryit">
-		<div class="outerDiv">
+		<div class="outerDiv" id="PelletSim">
 			<div class="calcDiv">
 				<a href="tools/pelletSimulator.html"><img src="img/pelletSimulatorLink.png" width="400" alt="Pellet simulator"></a>
 			</div>
