--- a/tools/pelletSimulator.html
+++ b/tools/pelletSimulator.html
@@ -6,7 +6,7 @@ title: Pellet Simulator
 	<body>
 		<div class="wrapper" id="main">
 			<h1>Pellet simulator</h1>
-			<h5 style="text-align: right; line-height: 0.5em;"><a href="https://www.moonwards.com">Moonwards Home</a></h5>
+			<h5 style="text-align: right; line-height: 0.5em;"><a href="https://www.moonwards.com/learn.html">Back to Learn</a></h5>
 			<div class="container">
 				<p>Finding very sensitive trajectories, like those requiring multiple gravity assists, is a very time consuming trial and error process. This tool allows you to try a whole range of velocities at once to narrow down the trajectory much faster. The idea is neither new nor mine, this is just an implementation.</p>
 				<form id="controls">
