typos and diagram upgrade
Former-commit-id: fcdb36fdf6e946bc61dcf818abfa59727acaffc3

--- a/tools/starplotter.html
+++ b/tools/starplotter.html
@@ -7,7 +7,7 @@ title: Starplotter
 		<div class="wrapper" id="main">
 			<h1>Star Plotter</h1>
 			<h5>Controls:</h5>
-			<p>Movement: A,S,D,F<br>Zoom: Q,E<br>Number of objects: +,-</p>
+			<p>Movement: W,A,S,D<br>Zoom: Q,E<br>Number of objects: +,-</p>
 			<canvas id="plot" width="1000" height="800"></canvas>
 		</div>
 		<script src="../js/stars.js"></script>
