--- a/tools/teth.html
+++ b/tools/teth.html
@@ -44,6 +44,7 @@ function calc(){
 	tether.centreVel = Math.sqrt(moon.gm/(moon.radius + tether.centre));
 	tether.footVel = (tether.foot + moon.radius) * tether.centreVel/(tether.centre + moon.radius);
 	tether.topVel = (tether.top + moon.radius) * tether.centreVel/(tether.centre + moon.radius);
+	tether.angularVelocity = tether.centreVel/(tether.centre + moon.radius);
 
 	tether.topOrbit = Math.sqrt(moon.gm/(tether.top + moon.radius));
 	tether.footOrbit = Math.sqrt(moon.gm/(tether.foot + moon.radius));
@@ -82,21 +83,48 @@ function calc(){
 	//upper part formula = -mu/r_c - v_c²/2 + mu/x + x²v_c²/(2r_c²)
 	//upper taper formula = e^((-mu/r_c - v_c²/2 + mu/x + x²v_c²/(2r_c²))/strength)
 	//Integral[e^((a+b/x + c*x^2)/d),x]
-	// or Integral[e^(a+b/x + c*x^2),x] <-- somebody integrate this? Plz
+	// or Integral[e^(a+b/x + c*x^2),x]
 
-	tether.lowIntegral =
-		moon.gm/(moon.radius+tether.foot)
-		+ Math.pow((moon.radius+tether.foot)*tether.centreVel/(tether.centre+moon.radius),2)/2
-		- moon.gm/(moon.radius+tether.centre)
-		- Math.pow(tether.centreVel,2)/2
-	tether.highIntegral = 
-		moon.gm/(moon.radius+tether.centre)
-		+ Math.pow(tether.centreVel,2)/2
-		- moon.gm/(moon.radius+tether.top)
-		- Math.pow((moon.radius+tether.top)*tether.centreVel/(tether.centre+moon.radius),2)/2
-	;
+	//alternatively:
+	//acceleration = mu/r² - w²r
+	//integral = -mu/r - w²r²/2
+	var integral = function(gm,angularVelocity,foot,top){
+		return Math.abs(
+			(
+				-gm/top - angularVelocity*angularVelocity*top*top/2
+			) - (
+				-gm/foot - angularVelocity*angularVelocity*foot*foot/2
+			)
+		);
+	};
+
+	tether.lowIntegral = integral(moon.gm,tether.angularVelocity,tether.foot + moon.radius,tether.centre + moon.radius);
+	tether.highIntegral = integral(moon.gm,tether.angularVelocity,tether.centre + moon.radius,tether.top + moon.radius);
 	tether.lowRatio = Math.pow(Math.E,tether.lowIntegral/tether.strength);
-	tether.highRatio = Math.pow(Math.E,-tether.highIntegral/tether.strength);
+	tether.highRatio = Math.pow(Math.E,tether.highIntegral/tether.strength);
+
+	var lowIteratorSum = 0;
+	var highIteratorSum = 0;
+	var iteratorLimit = 1000;
+	for(var i=0;i<iteratorLimit;i++){
+		lowIteratorSum += Math.pow(
+			Math.E,
+			integral(moon.gm,tether.angularVelocity,tether.foot + moon.radius,
+				tether.foot + i*(tether.centre - tether.foot)/iteratorLimit + moon.radius
+			)
+			/tether.strength
+		);
+		highIteratorSum += Math.pow(
+			Math.E,
+			integral(moon.gm,tether.angularVelocity,tether.centre + moon.radius,
+				tether.centre + i*(tether.top - tether.centre)/iteratorLimit + moon.radius
+			)
+			/tether.strength
+		);
+	};
+
+	tether.lowMass = tether.lowAcceleration*(tether.centre-tether.foot)*(lowIteratorSum/iteratorLimit)/tether.strength;
+	tether.highMass = tether.highAcceleration*(tether.top-tether.centre)*(highIteratorSum/iteratorLimit)/tether.strength;
 
 	tether.dockedMomentum = tether.centreVel * tether.centralMass * (moon.radius + tether.centre)
 		+ tether.payload * tether.footVel * (moon.radius + tether.foot);
@@ -146,13 +174,13 @@ tether.dockedEnergy =
 		out("newApoapsis","Apoapsis after release from tether: " + myRound(tether.newApoapsis/1000,3) + " km (negative means escape)");
 	};
 	out("hitTheGround","&nbsp;&nbsp;Velocity at lunar surface after release from tether foot " + myRound(tether.hitTheGround,3) + " m/s");
-	out("lowRatio","foot-centre taper ratio: " + myRound(tether.lowRatio,3) + " Y");
-	out("highRatio","centre-top taper ratio: " + myRound(tether.highRatio,3) + " Y");
-	out("badLowMass","Bad (too high) mass estimate of lower tether: "
-		+ myRound(tether.lowAcceleration*(tether.centre-tether.foot)*(tether.lowRatio + 1)/(2*tether.strength),4)
+	out("lowRatio","foot-centre taper ratio: " + myRound(tether.lowRatio,3));
+	out("highRatio","centre-top taper ratio: " + myRound(tether.highRatio,3));
+	out("lowMass","Mass of lower tether: "
+		+ myRound(tether.lowMass,4)
 		+ " x payload mass (payload includes foot platform)");
-	out("badHighMass","Bad (too high) mass estimate of higher tether: "
-		+ myRound(tether.highAcceleration*(tether.top-tether.centre)*(tether.highRatio + 1)/(2*tether.strength),4)
+	out("highMass","Mass of higher tether: "
+		+ myRound(tether.highMass,4)
 		+ " x payload mass (payload includes top platform)");
 
 	out("warnings",warnings);
@@ -201,12 +229,10 @@ tether.dockedEnergy =
 					<h4>Tether properties</h4>
 					<p id="lowAcceleration"></p>
 					<p id="lowRatio"></p>
-					<p id="badLowMass"></p>
 					<p id="lowMass"></p>
 					<p id="highAcceleration"></p>
 					<p id="highRatio"></p>
 					<p id="highMass"></p>
-					<p id="badHighMass"></p>
 				</div>
 			</div>
 		</div>
