--- a/tools/gravityTurn.html
+++ b/tools/gravityTurn.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-	</head>
-	<body>
+---
+layout: toolTemplate
+title: Gravity Turn
+---
 		<h1>Moon gravity turn simulation</h1>
 		<form id="input">
 			<input type="text" name="dryMass">Dry mass kg<br>
@@ -58,5 +56,3 @@ function calculate(){
 	document.getElementById("status").innerHTML = status;
 };
 		</script>
-	</body>
-</html>
